--- a/webgl-programming-guide/gifts/Wave.html
+++ b/webgl-programming-guide/gifts/Wave.html
@@ -1,19 +1,20 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta "charset=UTF-8" />
+<head>
+    <meta
+    "charset=UTF-8" />
     <title>Wave demo</title>
-  </head>
+</head>
 
-  <body onload="main()">
-    <canvas id="example" width="400" height="400">
+<body onload="main()">
+<canvas id="example" width="400" height="400">
     Please use a browser that supports "canvas"
-    </canvas>
+</canvas>
 
-    <script src="../lib/webgl-utils.js"></script>
-    <script src="../lib/webgl-debug.js"></script>
-    <script src="../lib/cuon-utils.js"></script>
-    <script src="../lib/cuon-matrix.js"></script>
-    <script src="Wave.js"></script>
-  </body>
+<script src="../lib/webgl-utils.js"></script>
+<script src="../lib/webgl-debug.js"></script>
+<script src="../lib/cuon-utils.js"></script>
+<script src="../lib/cuon-matrix.js"></script>
+<script src="Wave.js"></script>
+</body>
 </html>
