绘制一个圆点

--- a/test/draw-point.html
+++ b/test/draw-point.html
@@ -30,11 +30,11 @@
                 "void main(){\n" +
                 "   gl_Position=vec4(0.0,0.0,0.0,1.0);\n" +
                 "   gl_PointSize=20.0;\n" +
-                "}";
+                "}\n";
         var f_shader =
-                "void main(){" +
+                "void main(){\n" +
                 "   gl_FragColor = vec4(1.0, 0.0, 0.0, 1.0);\n" +
-                "}";
+                "}\n";
 
         if ( !initShaders( gl , v_shader , f_shader ) ) {
             console.log( "fail to init shader" );
