--- a/test/draw-point3.html
+++ b/test/draw-point3.html
@@ -33,9 +33,9 @@
                 "   gl_PointSize = 40.0;\n" +
                 "}";
         var f_shader =
-                "precision mediump float;\n"+
+                "precision mediump float;\n" +
                 "uniform vec4 color;\n" +
-                "void main(){" +
+                "void main(){\n" +
                 "   gl_FragColor = color;\n" +
                 "}";
 
