--- a/test/draw-triangle.html
+++ b/test/draw-triangle.html
@@ -25,6 +25,7 @@
                 "void main(){\n" +
                 "   gl_Position = position;\n" +
                 "   gl_PointSize = 10.0;\n" +
+                "   color = a_color;\n" +
                 "}\n";
         var f_shader =
                 "precision mediump float;\n" +
