--- a/test/draw-sphere.html
+++ b/test/draw-sphere.html
@@ -31,42 +31,53 @@
                 "}\n";
 
         if ( initShaders( gl , v_shade , f_shader ) ) {
-
+            gl.clearColor( 0 , 0 , 0 , 1 );
+            gl.clear( gl.COLOR_BUFFER_BIT );
             /*
-             * 1:0,0.5,0,
-             * 2:0,0.5,0.309,
-             * 3:0.5,0.309,0,
-             * 4:0.309,0,-0.5,
-             * 5:-0.309,0,-0.5,
-             * 6:-0.5,0.309,0,
-             * 7:-0.309,0,0.5,
-             * 8:0.309,0,0.5,
-             * 9:0.5,0,0.309,
-             * 10:0,-0.5,-0.309,
-             * 11:-0.5,-0.309,0,
-             * 12:0,-0.5,0.309,
+             * 1:   0,0.5,-0.309,
+             * 2:   0,0.5,0.309,
+             * 3:   0.5,0.309,0,
+             * 4:   0.309,0,-0.5,
+             * 5:   -0.309,0,-0.5,
+             * 6:   -0.5,0.309,0,
+             * 7:   -0.309,0,0.5,
+             * 8:   0.309,0,0.5,
+             * 9:   0.5,-0.309,0,
+             * 10:      0,-0.5,-0.309,
+             * 11:      -0.5,-0.309,0,
+             * 12:      0,-0.5,0.309,
              * */
             var data = new Float32Array( [
-//                0 , 0.5 , 0 , 0 , 0.5 , 0.309 , 0.5 , 0.309 , 0, //1-2-3
-//                0 , 0.5 , 0 , 0 , 0.5 , 0.309 , -0.5 , -0.309 , 0 ,//1-2-6
-//                0 , 0.5 , 0 , 0.5 , 0.309 , 0 , 0.309 , 0 , -0.5 ,//1-3-4
-//                0 , 0.5 , 0 , 0.309 , 0 , -0.5 , -0.309 , 0 , -0.5 ,//1-4-5
-//                0 , 0.5 , 0 , -0.309 , 0 , -0.5 , -0.5 , -0.309 , 0 ,//1-5-6
-                0 , 0.5 , 0.309 , -0.5 , 0.309 , 0 , -0.309 , 0 , 0.5 ,//2-6-7
-                0 , 0.5 , 0.309 , -0.309 , 0 , 0.5 , 0.309 , 0 , 0.5 , //2-7-8
-//                0 , 0.5 , 0.309 , 0.5 , 0.309 , 0 , 0.309 , 0 , 0.5 ,//2-3-8
-                -0.309 , 0 , 0.5 , 0.309 , 0 , 0.5 , 0 , -0.5 , 0.309 , //7-8-12
-//                -0.309 , 0 , 0.5 , -0.5 , -0.309 , 0 , 0 , -0.5 , 0.309 ,//7-11-12
-                -0.5 , 0.309 , 0 , -0.309 , 0 , 0.5 , -0.5 , -0.309 , 0 //6-7-11
-//                0.5 , 0.309 , 0 , 0.309 , 0 , 0.5 , 0.5 , 0 , 0.309 ,//3-8-9
-//                0.5 , 0.309 , 0 , 0.309 , 0 , -0.5 , 0.5 , 0 , 0.309 ,//3-4-9
-//                0.309 , 0 , 0.5 , 0.5 , 0 , 0.309 , 0 , -0.5 , 0.309 ,//8-9-12
-//                0.5 , 0 , 0.309 , 0 , -0.5 , -0.309 , 0 , -0.5 , 0.309 ,//9-10-12
-//                0.309 , 0 , -0.5 , 0.5 , 0 , 0.309 , 0 , -0.5 , -0.309 ,//4-9-10
-//                0.309 , 0 , -0.5 , -0.309 , 0 , -0.5 , 0 , -0.5 , -0.309 ,//4-5-10
-//                -0.309 , 0 , -0.5 , -0.5 , -0.309 , 0 , -0.5 , -0.309 , 0 ,//5-6-11
-//                0 , -0.5 , -0.309 , -0.5 , -0.309 , 0 , 0 , -0.5 , 0.309 ,//10-11-12
-//                -0.5 , -0.309 , 0 , -0.309 , 0 , 0.5 , -0.5 , -0.309 , 0//6-7-11
+                0 , 0.5 , -0.309 , 0 , 0.5 , 0.309 , //   1-2
+                0 , 0.5 , -0.309 , 0.5 , 0.309 , 0 ,    //  1-3
+                0 , 0.5 , -0.309 , 0.309 , 0 , -0.5 , //   1-4
+                0 , 0.5 , -0.309 , -0.309 , 0 , -0.5 , //  1-5
+                0 , 0.5 , -0.309 , -0.5 , 0.309 , 0 ,  //  1-6
+                0 , 0.5 , 0.309 , 0.5 , 0.309 , 0 ,    //   2-3
+                0 , 0.5 , 0.309 , -0.5 , 0.309 , 0 ,    //  2-6
+                0 , 0.5 , 0.309 , -0.309 , 0 , 0.5 ,   //  2-7
+                0 , 0.5 , 0.309 , 0.309 , 0 , 0.5 , //  2-8
+                0.5 , 0.309 , 0 , 0.309 , 0 , -0.5 ,    //  3-4
+                0.5 , 0.309 , 0 , 0.309 , 0 , 0.5 ,    // 3-8
+                0.5 , 0.309 , 0 , 0.5 , -0.309 , 0 ,    //3-9
+                0.309 , 0 , -0.5 , -0.309 , 0 , -0.5 ,  //  4-5
+                0.309 , 0 , -0.5 , 0.5 , -0.309 , 0 ,   //  4-9
+                0.309 , 0 , -0.5 , 0 , -0.5 , -0.309 ,    //  4-10
+                -0.309 , 0 , -0.5 , -0.5 , 0.309 , 0 , //  5-6
+                -0.309 , 0 , -0.5 , 0 , -0.5 , -0.309 ,   //  5-10
+                -0.309 , 0 , -0.5 , -0.5 , -0.309 , 0 ,   //  5-11
+                -0.5 , 0.309 , 0 , -0.309 , 0 , 0.5 ,  //  6-7
+                -0.5 , 0.309 , 0 , -0.5 , -0.309 , 0 ,   //  6-11
+                -0.309 , 0 , 0.5 , 0.309 , 0 , 0.5 , //   7-8
+                -0.309 , 0 , 0.5 , -0.5 , -0.309 , 0 ,  // 7-11
+                -0.309 , 0 , 0.5 , 0 , -0.5 , 0.309 ,   //  7-12
+                0.309 , 0 , 0.5 , 0.5 , -0.309 , 0 ,   // 8-9
+                0.309 , 0 , 0.5 , 0 , -0.5 , 0.309 ,  //  8-12
+                0.5 , -0.309 , 0 , 0 , -0.5 , -0.309 , //  9-10
+                0.5 , -0.309 , 0 , 0 , -0.5 , 0.309 ,   //  9-12
+                0 , -0.5 , -0.309 , -0.5 , -0.309 , 0 ,   //  10-11
+                0 , -0.5 , -0.309 , 0 , -0.5 , 0.309 ,  // 10-12
+                -0.5 , -0.309 , 0 , 0 , -0.5 , 0.309 //  11-12
             ] );
             var buffer = gl.createBuffer();
             var position = gl.getAttribLocation( gl.program , "position" );
@@ -76,7 +87,7 @@
             gl.vertexAttribPointer( position , 3 , gl.FLOAT , false , 3 * size , 0 );
             gl.enableVertexAttribArray( position );
 
-            gl.drawArrays( gl.TRIANGLES , 0 , 12 );
+            gl.drawArrays( gl.LINES , 0 , 60 );
 
         }
 
