--- a/test/complex/jellyfish.html
+++ b/test/complex/jellyfish.html
@@ -22,7 +22,7 @@
         var v_shader =
                 "attribute vec4 position;\n" +
                 "void main(){\n" +
-                "   gl_Position = position*5.0;\n" +
+                "   gl_Position = vec4(position.x/12.0,position.y/12.0,position.z/12.0,1);\n" +
                 "}\n";
 
         var f_shader =
@@ -41,7 +41,7 @@
             gl.bindBuffer( gl.ELEMENT_ARRAY_BUFFER , bufferI );
             gl.bufferData( gl.ELEMENT_ARRAY_BUFFER , new Uint16Array( jellyfish1.indices ) , gl.STATIC_DRAW );
 
-            gl.clearColor( 0 , 0 , 0 , 1 );
+            gl.clearColor( 0 , 0 ,0, 1 );
             gl.clear( gl.COLOR_BUFFER_BIT );
 
             gl.drawElements( gl.TRIANGLES , jellyfish1.indices.length , gl.UNSIGNED_SHORT , 0 );
