--- a/test/draw-sphere.html
+++ b/test/draw-sphere.html
@@ -92,9 +92,9 @@
             gl.uniformMatrix4fv( matrix , false , curMatrix );
             gl.drawArrays( gl.LINES , 0 , 60 );
 
-//            requestAnimate( function () {
-//                rotateObj( 1 , -1 );
-//            } );
+            requestAnimate( function () {
+                rotateObj( 1 , -1 );
+            } );
 
             onDrag( canvas , {
                 onMove : function ( dx , dy ) {
@@ -106,9 +106,7 @@
         }
 
         function rotateObj( dx , dy ) {
-            var s = ( Math.abs( dx ) + Math.abs( dy )) / 3.5;
-//            var s = dx * dy / 2;
-            var t_matrix = rotate3dM( dy , -dx , 0 , s );
+            var t_matrix = rotate3dM( 0 , 1 , 0 , 1 );
             gl.clear( gl.COLOR_BUFFER_BIT );
             curMatrix = combine( t_matrix , curMatrix );
             gl.uniformMatrix4fv( matrix , false , curMatrix );
