--- a/jellyfish/index.html
+++ b/jellyfish/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-    <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
+    <meta charset="utf-8">
     <title>水母</title>
     <link href="style.css" rel="stylesheet" type="text/css">
     <script type="text/javascript" src="jquery-1.7.2.min.js"></script>
@@ -65,7 +65,7 @@ void main(void) {
 
   float offset = smoothstep(0.0,1.,max(0.,-aVertexPosition.y-0.8)/10.);
 
-  vec3 anim = (vec3(aVertexColor.x,aVertexColor.y,aVertexColor.z)/8.0*sin(time) * (1.-offset));
+  vec3 anim = ( aVertexColor.xyz/8.0*sin(time) * (1.-offset) );
   vec3 pos = aVertexPosition + anim;
 
   //skinning
@@ -105,6 +105,10 @@ void main(void) {
 
 
 
+
+
+
+
     </script>
 
     <script id="jellyfish-fs" type="x-shader/x-fragment">
@@ -128,6 +132,10 @@ void main(void) {
 
   gl_FragColor = vec4(((vDiffuse + caustics)*colorMap.rgb) + vFresnel, colorMap.a);
 }
+
+
+
+
 
 
 
